# uax14_rs

./: Cargo.toml  README.md  cbindgen.toml
.github/workflows/: CI.yml
android-examples/: Cargo.toml  README.md
android-examples/examples/: hello_world.rs
benches/: bench.rs
src/: android.rs  ffi.rs  generic.rs  lb_define.rs  lib.rs  line_breaker.rs  lstm.rs  macos.rs  pango.rs  properties.rs  rule_table.rs  windows.rs
tests/: css_line_break.rs  css_word_break.rs  spec_test.rs
tools/: generate_properties.py
