[package]
name = "uax14_rs"
description = "Implement UAX#14 in Rust"
version = "0.1.0"
authors = ["Makoto Kato <m_kato@ga2.so-net.ne.jp>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/makotokato/uax14_rs"
keywords = ["unicode"]
categories = ["text-processing"]

[dependencies]
num = "0.2.1"

[profile.release]
lto = true
