[package]
name = "uax14_rs"
description = "Implement UAX#14 in Rust"
version = "0.1.0"
authors = ["Makoto Kato <m_kato@ga2.so-net.ne.jp>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/makotokato/uax14_rs"
keywords = ["unicode"]
categories = ["text-processing"]

[dependencies]
unicode-width = "0.1.7"

[target."cfg(target_os = \"windows\")".dependencies.winapi]
version = "0.3.7"
features = ["usp10"]

[target."cfg(target_os = \"macos\")".dependencies.core-foundation]
version = "0.9"

[target."cfg(target_os = \"android\")".dependencies.jni]
version = "0.18.0"
