[package]
name = "android-examples"
version = "0.1.0"
authors = ["Makoto Kato <m_kato@ga2.so-net.ne.jp>"]
edition = "2018"
publish = false

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.3.0"
ndk = { version = "0.3.0", features = ["trace"] }
jni = "0.18.0"
uax14_rs = { path = ".." }

[[example]]
name = "hello_world"
crate-type = ["cdylib"]
